--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
     "firebase": "^10.13.1",
+    "firebase-admin": "^12.5.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
